align fixed

--- a/src/styles/_cart.scss
+++ b/src/styles/_cart.scss
@@ -10,7 +10,7 @@
     main {
         margin-top: 3rem;
         width: 500px;
-        min-width: 350px;
+        min-width: 330px;
         height: 500px;
         overflow-y: auto;
 
@@ -37,6 +37,7 @@
             @media screen and (width <=770px) {
                 font-size: 2.5rem;
             }
+
             @media screen and (width <=570px) {
                 font-size: 1.9rem;
                 text-align: center;
@@ -51,7 +52,7 @@
         width: 400px;
         min-width: 200px;
         height: 500px;
-        background-color:rgba(214, 214, 214, 0.267) ;
+        background-color: rgba(214, 214, 214, 0.267);
         color: black;
 
         @media screen and (width <=770px) {
@@ -73,7 +74,7 @@
 
             @media screen and (width <=770px) {
                 font-size: 1.1rem;
-                font-weight:500 ;
+                font-weight: 500;
             }
         }
 
@@ -82,6 +83,7 @@
             border: 1px solid rgba(0, 0, 0, 0.28);
             outline: none;
             margin-top: .5rem;
+            margin-bottom: .5rem;
             font-size: 0.9rem;
 
             @media screen and (width <=770px) {
@@ -150,8 +152,12 @@
 
     article {
         @include flex(column, center, flex-start, 0.25rem);
-        font-size: 0.93rem;
+        font-size: 0.9rem;
         color: $color2;
+
+        @media screen and (width <=770px) {
+            font-size: 0.8rem;
+        }
 
         &:hover {
             color: #D21F3C;
