--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -82,6 +82,7 @@
                 border-radius: .3rem;
                 outline: none;
                 font-family: "Poppins", sans-serif;
+                border: 1px solid rgba(214, 208, 208, 0.664);
 
                 @media screen and (width <=1000px) {
                     padding: .5rem;
