--- a/src/styles/_productCard.scss
+++ b/src/styles/_productCard.scss
@@ -1,5 +1,5 @@
 .product-card-container {
-    width: 200px;
+    width: 190px;
     height: 290px;
     margin-top: 1rem;
 
